// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getColumnHeaders should return hierarchical column headers 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "drillItems": Array [
          Object {
            "attributeHeaderItem": Object {
              "name": "East Coast",
              "uri": "/gdc/md/referenceworkspace/obj/1086/elements?id=460488",
            },
          },
          Object {
            "attributeHeader": Object {
              "formOf": Object {
                "identifier": "attr.owner.region",
                "name": "Region",
                "ref": Object {
                  "uri": "/gdc/md/referenceworkspace/obj/1086",
                },
                "uri": "/gdc/md/referenceworkspace/obj/1086",
              },
              "identifier": "label.owner.region",
              "localIdentifier": "a_label.owner.region",
              "name": "Region",
              "ref": Object {
                "uri": "/gdc/md/referenceworkspace/obj/1087",
              },
              "uri": "/gdc/md/referenceworkspace/obj/1087",
            },
          },
          Object {
            "measureHeaderItem": Object {
              "format": "$#,##0.00",
              "identifier": "aangOxLSeztu",
              "localIdentifier": "m_aangOxLSeztu",
              "name": "Amount",
              "ref": Object {
                "uri": "/gdc/md/referenceworkspace/obj/1271",
              },
              "uri": "/gdc/md/referenceworkspace/obj/1271",
            },
          },
        ],
        "field": "a_1086_460488-m_0",
        "headerName": "Amount",
        "measureIndex": 0,
        "type": "MEASURE_COLUMN",
      },
    ],
    "drillItems": Array [],
    "field": "a_1086_460488",
    "headerName": "East Coast",
    "type": "COLUMN_ATTRIBUTE_COLUMN",
  },
  Object {
    "children": Array [
      Object {
        "drillItems": Array [
          Object {
            "attributeHeaderItem": Object {
              "name": "West Coast",
              "uri": "/gdc/md/referenceworkspace/obj/1086/elements?id=460489",
            },
          },
          Object {
            "attributeHeader": Object {
              "formOf": Object {
                "identifier": "attr.owner.region",
                "name": "Region",
                "ref": Object {
                  "uri": "/gdc/md/referenceworkspace/obj/1086",
                },
                "uri": "/gdc/md/referenceworkspace/obj/1086",
              },
              "identifier": "label.owner.region",
              "localIdentifier": "a_label.owner.region",
              "name": "Region",
              "ref": Object {
                "uri": "/gdc/md/referenceworkspace/obj/1087",
              },
              "uri": "/gdc/md/referenceworkspace/obj/1087",
            },
          },
          Object {
            "measureHeaderItem": Object {
              "format": "$#,##0.00",
              "identifier": "aangOxLSeztu",
              "localIdentifier": "m_aangOxLSeztu",
              "name": "Amount",
              "ref": Object {
                "uri": "/gdc/md/referenceworkspace/obj/1271",
              },
              "uri": "/gdc/md/referenceworkspace/obj/1271",
            },
          },
        ],
        "field": "a_1086_460489-m_0",
        "headerName": "Amount",
        "measureIndex": 0,
        "type": "MEASURE_COLUMN",
      },
    ],
    "drillItems": Array [],
    "field": "a_1086_460489",
    "headerName": "West Coast",
    "type": "COLUMN_ATTRIBUTE_COLUMN",
  },
]
`;

exports[`getFields should correctly obtain column fields for single measure, multiple columns 1`] = `
Array [
  "a_1091_166498-a_1086_460488-m_0",
  "a_1091_166498-a_1086_460489-m_0",
  "a_1091_166647-a_1086_460488-m_0",
  "a_1091_166647-a_1086_460489-m_0",
  "a_1091_168751-a_1086_460488-m_0",
  "a_1091_168751-a_1086_460489-m_0",
  "a_1091_166425-a_1086_460488-m_0",
  "a_1091_166425-a_1086_460489-m_0",
  "a_1091_166442-a_1086_460488-m_0",
  "a_1091_166442-a_1086_460489-m_0",
  "a_1091_166450-a_1086_460488-m_0",
  "a_1091_166450-a_1086_460489-m_0",
  "a_1091_165679-a_1086_460488-m_0",
  "a_1091_165679-a_1086_460489-m_0",
  "a_1091_165872-a_1086_460488-m_0",
  "a_1091_165872-a_1086_460489-m_0",
]
`;

exports[`getFields should correctly obtain column fields for single measure, single column 1`] = `
Array [
  "a_1086_460488-m_0",
  "a_1086_460489-m_0",
]
`;

exports[`getFields should correctly obtain column fields for two measures, single columns 1`] = `
Array [
  "a_1086_460488-m_0",
  "a_1086_460488-m_1",
  "a_1086_460489-m_0",
  "a_1086_460489-m_1",
]
`;

exports[`getRowHeaders should return an array of grid headers 1`] = `
Array [
  Object {
    "drillItems": Array [
      Object {
        "attributeHeader": Object {
          "formOf": Object {
            "identifier": "attr.product.id",
            "name": "Product",
            "ref": Object {
              "uri": "/gdc/md/referenceworkspace/obj/1054",
            },
            "uri": "/gdc/md/referenceworkspace/obj/1054",
          },
          "identifier": "label.product.id.name",
          "localIdentifier": "a_label.product.id.name",
          "name": "Product Name",
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/1055",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1055",
        },
      },
    ],
    "field": "a_1055",
    "headerName": "Product",
    "type": "ROW_ATTRIBUTE_COLUMN",
  },
]
`;

exports[`getRowHeaders should return an array of grid headers with row group settings and extended by custom options 1`] = `
Array [
  Object {
    "drillItems": Array [
      Object {
        "attributeHeader": Object {
          "formOf": Object {
            "identifier": "attr.product.id",
            "name": "Product",
            "ref": Object {
              "uri": "/gdc/md/referenceworkspace/obj/1054",
            },
            "uri": "/gdc/md/referenceworkspace/obj/1054",
          },
          "identifier": "label.product.id.name",
          "localIdentifier": "a_label.product.id.name",
          "name": "Product Name",
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/1055",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1055",
        },
      },
    ],
    "field": "a_1055",
    "headerName": "Product",
    "hide": true,
    "rowGroup": true,
    "type": "custom",
  },
]
`;

exports[`headerToGrid should return correct grid header for a measure header with correct prefix 1`] = `
Object {
  "field": "prefix_m_0",
  "headerName": "Amount",
}
`;

exports[`headerToGrid should return correct grid header for an attribute header with correct prefix 1`] = `
Object {
  "field": "prefix_a_1054_165678",
  "headerName": "CompuSci",
}
`;

exports[`identifyHeader should return correct field key for a measure header 1`] = `"m_0"`;

exports[`identifyHeader should return correct field key for an attribute header 1`] = `"a_1054_165678"`;

exports[`identifyResponseHeader should return correct field key for an attribute response header 1`] = `"a_1055"`;
